syntax="proto3";

package greet;

option go_package="github.com/jhayakrishnaKS/GO_GRPC/greet/proto";

import "mul.proto";


message GreetRequest{
    string first_name=1;
}

message GreetResponse{
    string result=1;
}

service GreetService{
    rpc Greet(GreetRequest) returns(GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
    rpc mul(MulRequest) returns(MulResponse);
    rpc LongGreet(stream GreetRequest) returns(GreetResponse);
    rpc GreetEveryone(stream GreetRequest) returns(stream GreetResponse);
    rpc GreetWithDeadline(GreetRequest) returns(GreetResponse);
}